# Mealie-Ingredient-Parser

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  STYLE_GUIDE.md  main.py  missing units and foods.txt  pyproject.toml  requirements.txt
.bmad-core/: install-manifest.yaml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
docs/: batch-mode-user-guide.md  brainstorming-session-results.md  brief.md  front-end-spec.md
docs/architecture/: api-layer.md  architecture-patterns.md  batch-integration-points.md  change-log.md  coding-standards.md  component-architecture.md  component-standards.md  data-flow.md  deployment-architecture.md  developer-standards.md  environment-configuration.md  error-handling.md  index.md  modal-workflows.md  project-structure.md  routing.md  screen-navigation.md  state-management.md  styling-guidelines.md  summary.md  system-overview.md  table-of-contents.md  tech-stack.md  testing-requirements.md
docs/epics/: epic-list.md
docs/front-end-spec/: accessibility-requirements.md  animation-micro-interactions.md  branding-style-guide.md  component-library-design-system.md  index.md  information-architecture-ia.md  next-steps.md  overall-ux-goals-principles.md  performance-considerations.md  responsiveness-strategy.md  user-flows.md  wireframes-mockups.md
docs/prd/: checklist-results-report.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  scope.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.extract-analyze-unparsed-patterns.md
mealie_parser/: __init__.py  api.py  app.py  config.py  error_handling.py  logging_config.py  session_manager.py  utils.py  validation.py
mealie_parser/constants/: __init__.py  pattern_display.py
mealie_parser/modals/: __init__.py  batch_action_modal.py  data_management_modal.py  food_modals.py  parse_config_modal.py  session_resume_modal.py  unit_modals.py  unmatched_food_modal.py  unmatched_unit_modal.py
mealie_parser/models/: __init__.py  pattern.py  screen_state.py  session_state.py
mealie_parser/screens/: __init__.py  batch_parsing.py  batch_preview.py  batch_units.py  ingredient_review.py  loading.py  mode_selection.py  pattern_group.py  recipe_list.py
mealie_parser/services/: __init__.py  parse_result_processor.py  pattern_analyzer.py  table_manager.py
tests/: __init__.py
tests/unit/: __init__.py  test_api_aliases.py  test_batch_action_modal.py  test_batch_api.py  test_batch_preview_screen.py  test_data_management_modal.py  test_error_handling.py  test_food_workflows.py  (+9 more)
(+17 files in other folders)
